@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:31597
+  FORMAL BUILD NUMBER:31598
 */
 
-#define PRODUCT_VER_STRING "3.0.0.31597"
-#define FILE_VER_STRING "WI-T3.0.0.31597"
-#define LICENSE_VER_STRING "WI-T3.0.0.31597"
-#define FILE_VER_NUMBER 3, 0, 0, 31597
+#define PRODUCT_VER_STRING "3.0.0.31598"
+#define FILE_VER_STRING "WI-T3.0.0.31598"
+#define LICENSE_VER_STRING "WI-T3.0.0.31598"
+#define FILE_VER_NUMBER 3, 0, 0, 31598
 #define FB_MAJOR_VER "3"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "0"
-#define FB_BUILD_NO "31597"
+#define FB_BUILD_NO "31598"
 #define FB_BUILD_TYPE "T"
 #define FB_BUILD_SUFFIX "Firebird 3.0 Beta 2"
